@@ -1,1 +1,1 @@
-3.0.23
+3.0.24
