@@ -15,16 +15,18 @@ HELPINST_ALL = $(notdir $(HELPINST))
 
 DEFAULT_LANG =
 
-FILES_INST   = init languages $(TRANSLATIONS) 16x16.fnt back.jpg \
-	       splash.jpg greeting.jpg dots.jpg kroete.dat \
-	       $(HELPINST_ALL)
+PIC_COMMON   = back.jpg head{.jpg,_a.pcx} {l,r,v}dots{.jpg,_a.pcx}
+PIC_INSTALL  = greeting.jpg
 
-FILES_BOOT   = init languages $(TRANSLATIONS) 16x16.fnt back.jpg \
-	       dots.jpg $(HELPBOOT_ALL)
+FILES_INST   = init languages $(TRANSLATIONS) 16x16.fnt kroete.dat \
+	       $(PIC_COMMON) $(PIC_INSTALL) $(HELPINST_ALL)
 
-FILES_BOOT_EN = init languages en.tr 16x16.fnt back.jpg dots.jpg en.hlp
+FILES_BOOT   = init languages $(TRANSLATIONS) 16x16.fnt \
+	       $(PIC_COMMON) $(HELPBOOT_ALL)
 
-INST_EXT     = 16x16.fnt back.jpg splash.jpg greeting.jpg dots.jpg kroete.dat *.hlp *.tr
+FILES_BOOT_EN = init languages en.tr 16x16.fnt $(PIC_COMMON) en.hlp
+
+INST_EXT     = 16x16.fnt $(PIC_COMMON) $(PIC_INSTALL) kroete.dat *.hlp *.tr
 
 ifdef DEFAULT_LANG
 FILES_INST += lang
