@@ -1,3 +1,5 @@
+	- support images with alpha channel
+
 27/7/2005:	v3.0.23
 	- texts updated
 
